# loom

./: .gitignore  Cargo.toml  Makefile  README.md  todo.md
ec2-driver/: boot.sh  estimate-remote.sh  estimate.sh  fresh-install.sh  install.sh  launch.py  monitor.py  prices.py  push-scene.sh  run-remote.sh  run.sh
scene/: background.py  camera.py  emitter.py  lambertian.py  materials.py  metal.py  obj.py  phong.py  rectangle.py  scene.py  scene_object.py  sphere.py  triangle_mesh.py
scene/tests/: bunny.py  cornell_box.py  cornell_box_2.py  cornell_box_3.py
scripts/: estimate-runtime.py  obj_to_json.py  parallel_driver.py  run.py  tonemap.py
src/: aabb.rs  background.rs  bvh.rs  camera.rs  combine-linear.rs  combine-main.rs  deserialize.rs  dielectric.rs  disc.rs  emitter.rs  hemisphere.rs  hitable.rs  hitable_list.rs  lambertian.rs  main.rs  material.rs  matrix.rs  metal.rs  mixture.rs  phong.rs  plane.rs  random.rs  ray.rs  rectangle.rs  sampling.rs  scene.rs  serializable.rs  sphere.rs  sphere_geometry.rs  tests.rs  triangle_mesh.rs  vector.rs  ward.rs
src/geometry/: aabb.rs  mod.rs  ray.rs
src/hitable/: bvh.rs  hitable_list.rs  mod.rs  rectangle.rs  sphere.rs  triangle_mesh.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mixture.rs  mod.rs
tests/: bunny-scene.json  bunny.json  cornell-box.json  s1.json  s2.json  s3.json  s4.json
