[package]
name = "loom"
version = "0.1.0"
authors = ["cscheid"]

[dependencies]
rand = "0.3"
getopts = "0.2"
serde_json = "1.0"
serde_derive = "1.0"
bincode = "0.9.2"
rayon = "1.0"

[dependencies.serde]
version = "1.0"
features = [ "rc" ]

[profile.release]
debug = true

[[bin]]
name = "loom-render"
path = "src/main.rs"


